...
        android:layout_gravity="center"
        android:layout_weight="0"
        android:paddingBottom="20dp">


        <Button
            android:id="@+id/buttonFiltrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/spinner"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorPrimary"
            android:text="Filtrar"
            android:textColor="#FFFFFF"
            android:textSize="12dp" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/colorPrimary"
            android:text="Reset"
            android:textColor="#FFFFFF"
...
        android:id="@+id/swiperefresh"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="95">

        <ListView
            android:id="@+id/listViewGasolineras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


...
