...
                android:text="@string/Descuento"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxDescuentoSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:text="Si"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/checkBoxDescuentoNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="No"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />
...
                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@id/buttonApply"
                    android:background="@drawable/roundedbutton"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Cancel"
                    android:textColor="@color/colorPrimary" />

                <Button
...
