...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtDescuento"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/cupon_centrico"
...
            android:text="bldkflsks"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/buttonAceptarDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
...
