...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonVerDescuento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/roundedbutton"
                android:backgroundTint="@color/colorPrimary"
                android:text="  Ver descuento  "
...
