<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:showAsAction="always">

    <!-- opcion para refrescar los datos -->
    <item
        android:id="@+id/itemActualizar"
        android:title="@string/menuActualizar" />

    <!-- opcion para mostrar lista de gasolineras -->
    <item
        android:id="@+id/itemGasolineras"
        android:title="@string/menuGasolineras" />

    <!-- opcion para mostrar lista de vehiculos del usuario -->
    <item
        android:id="@+id/itemMisVehiculos"
        android:title="@string/menuMisVehiculos" />

    <!-- opcion para mostrar informacion -->
    <item
        android:id="@+id/itemNuevoVehiculo"
        android:title="Nuevo Vehículo" />
    <item
        android:id="@+id/itemDescuentos"
        android:title="@string/menuDescuentos" />
    <item
        android:id="@+id/itemFabrica"
        android:title="Restaurar vehículos de fábrica" />
    <item
        android:id="@+id/itemInfo"
        android:title="@string/menuInfo" />

</menu>